# whereismybin

./: Cargo.toml  README.md
src/: lib.rs
